--- a/vignettes/blueprint-july.Rmd
+++ b/vignettes/blueprint-july.Rmd
@@ -64,7 +64,7 @@ These are:
 ## Consistent Use of Data from the USA {#usa-data}
 
 ```{r}
-human_population <- 250000L
+human_population <- 100000L
 
 parameters_list_usa <- get_parameters(list(human_population = human_population, 
                                            seed = 1, 
@@ -341,7 +341,7 @@ c
 ```
 
 | Parameter       | Value Used                          | Description                                                                                     | Source                                                                                                                                  |
-|-----------------|-----------------|-----------------|-----------------------|
+|-------------|-------------|-------------------|----------------------------|
 | $\pi$           | 27 viruses per person per hour      | Rates of infective virus emission from infected individuals.                                    | @blatchley2023quantitative & @buonanno2020quantitative                                                                                  |
 | $D_{school}$    | 30 per 100m^2^                      | Assumed density of individuals in schools                                                       | ANSI/ASHRAE Standard 62.1-2022 Table 6.1                                                                                                |
 | $A_{school}$    | 0.1-2.9 air changes per hour (ACPH) | Range of ACPH considered for schools.                                                           | [Corsi et al, 2006](https://corsiaq.com/reports-etc/) - Section 3.1                                                                     |
@@ -358,32 +358,102 @@ c
 
 : Table 1: Parameter Estimates Used to Calculate Variation in Riskiness Across Locations Belonging to the Same Setting Type
 
-# Assessing how various far UVC parameters shape another outcome {#assessing}
+# Assessing the impact of far UVC on the burden of an endemic respiratory virus  {#assessing}
 
-We considered two pathogen archetypes, SARS-CoV-2 and influenza.
-The properties of SARS-CoV-2 were as follows.
-The properties of influenza were as follows.
-For each pathogen archetype, we considered the effect of far UVC efficacy and far UVC coverage on another outcome.
-We varied far UVC efficacy in the following range.
-We varied far UVC coverage in the following range with the following settings.
-The results are presented in Figure \@ref(fig:placeholder-1) and Figure \@ref(fig:placeholder-2).
+Using the modelling framework described above, we carried out a suite of exploratory analyses evaluating the potential impact of far UVC deployment on the burden of a hypothetical endemic respiratory virus (i.e. a virus for which disease burden
+
+We considered two pathogen archetypes:
+
+-   **"SARS-CoV-2-Like" Archetype** - $R_0$ of 2.5, a mean latent period of 2 days and a mean duration of infectiousness of 4 days.
+
+-   **"Influenza-Like" Archetype** - $R_0$ of 1.5, a mean latent period of 1 day and a mean duration of infectiousness of 2 days.
+
+For each pathogen archetype, we investigated the effect of far UVC efficacy and far UVC coverage on another outcome, running multiple model simulations varying:
+
+-   **far UVC Coverage:** Coverages of either 10%, 25% or 50% - in all cases, far UVC was assumed to be installed in schools, workplaces and leisure locations only (i.e. not households), and within each Setting Type, a random set of locations .
+
+-   **far UVC Efficacy:** Efficacies of 40%, 60% and 80% were explored, with the assumption that far UVC efficacy was identical across all Settings and Locations where it had been installed.
+
+All results presented here are
+
+The results of these analyses are presented in Figure \@ref(fig:placeholder-1).
 
 ```{r placeholder-1, fig.cap="(ref:placeholder-1)"}
-data.frame(x = 1:5, y = 1:5) |>
-  ggplot(aes(x = x, y = y)) +
-  geom_point() +
-  theme_minimal()
+
+# Loading in the outputs
+outputs1 <- readRDS(paste0(here::here(), "/inst/blueprint_output_2_July2024/raw_outputs_results1.rds"))
+outputs2 <- readRDS(paste0(here::here(), "/inst/blueprint_output_2_July2024/raw_outputs_results2.rds"))
+outputs3 <- readRDS(paste0(here::here(), "/inst/blueprint_output_2_July2024/raw_outputs_results3.rds"))
+outputs4 <- readRDS(paste0(here::here(), "/inst/blueprint_output_2_July2024/raw_outputs_results4.rds"))
+outputs <- c(outputs1, outputs2, outputs3, outputs4)
+simulations_to_run <- readRDS(paste0(here::here(), "/inst/blueprint_output_2_July2024/simulations_to_run.rds"))
+parameter_lists <- readRDS(paste0(here::here(), "/inst/blueprint_output_2_July2024/parameter_lists.rds"))
+
+dt <- parameter_lists[[1]]$dt
+population <- parameter_lists[[1]]$human_population
+years_to_simulate <- parameter_lists[[1]]$simulation_time / 365
+timestep_baseline_start <- ((years_to_simulate - 6) * 365) / dt
+timestep_baseline_end <- ((years_to_simulate - 2) * 365) / dt
+timestep_uvc_start <- ((years_to_simulate - 2) * 365 + 1) / dt
+timestep_uvc_end <- (years_to_simulate * 365) / dt
+
+## Removing the burnin whilst the model reaches equilibrium
+outputs_processed <- outputs
+index_start <- which(outputs_processed[[1]]$timestep == timestep_baseline_start)
+index_end <- which(outputs_processed[[1]]$timestep == timestep_uvc_end)
+for (i in 1:length(outputs)) {
+  outputs_processed[[i]] <- outputs_processed[[i]][index_start:index_end, ]
+  outputs_processed[[i]]$archetype <- simulations_to_run[i, "archetype"]
+  outputs_processed[[i]]$coverage <- simulations_to_run[i, "coverage"]
+  outputs_processed[[i]]$efficacy <- simulations_to_run[i, "efficacy"]
+  outputs_processed[[i]]$iteration <- simulations_to_run[i, "iteration"]
+  outputs_processed[[i]]$new_timestep <- outputs_processed[[i]]$timestep - min(outputs_processed[[i]]$timestep)
+}
+
+subset_index <- 4 * 365
+overall <- dplyr::bind_rows(outputs_processed) %>%
+  mutate(daily_timestep = floor(new_timestep * dt)) %>%
+  group_by(iteration, archetype, efficacy, coverage, daily_timestep) %>%
+  summarise(S_count = mean(S_count),
+            E_count = mean(E_count),
+            I_count = mean(I_count),
+            R_count = mean(R_count),
+            E_new = sum(E_new),
+            n_external_infections = sum(n_external_infections))
+end <- length(unique(overall$daily_timestep))
+
+overall5 <- overall %>%
+  group_by(iteration, daily_timestep, archetype, efficacy, coverage) %>%
+  summarise(S_count = mean(S_count), E_new = mean(E_new)) %>%
+  ungroup() %>%
+  group_by(iteration, archetype, efficacy, coverage) %>%
+  summarise(incidence_pre_uvc = sum(E_new[1:subset_index]) / 4,
+            incidence_after_uvc = sum(E_new[(subset_index + 1):end]) / 2) %>%
+  mutate(incidence_reduction = incidence_pre_uvc - incidence_after_uvc,
+         incidence_percentage_reduction = incidence_reduction / incidence_pre_uvc) %>%
+  ungroup() %>%
+  group_by(archetype, efficacy, coverage) %>%
+  summarise(incidence_percentage_reduction_mean = mean(incidence_percentage_reduction),
+            incidence_percentage_reduction_lower = min(incidence_percentage_reduction),
+            incidence_percentage_reduction_upper = max(incidence_percentage_reduction))
+ggplot(overall5, aes(x = factor(100 * efficacy), y = 100 * incidence_percentage_reduction_mean)) +
+  geom_bar(stat = "identity", position = "dodge", fill = "#324A5F", col = "black") +
+  geom_errorbar(aes(ymin = 100 * incidence_percentage_reduction_lower,
+                    ymax = 100 * incidence_percentage_reduction_upper),
+                width = 0.5) +
+  theme_bw() +
+  facet_grid(archetype ~ coverage, 
+             labeller = as_labeller(c(`0` = "0% Coverage",
+                                      `0.1` = "10% Coverage",
+                                      `0.25` = "25% Coverage",
+                                      `0.5` = "50% Coverage",
+                                      `flu` = "Influenza",
+                                      `sars_cov_2` = "SARS-CoV-2"))) +
+  labs(fill = "Time\nPeriod", x = "Far UVC Efficacy (%)",
+       y = "% Reduction in Annual Incidence of Infection")
 ```
 
-(ref:placeholder-1) Placeholder one.
-
-```{r placeholder-2, fig.cap="(ref:placeholder-2)"}
-data.frame(x = 1:5, y = 1:5) |>
-  ggplot(aes(x = x, y = y)) +
-  geom_point() +
-  theme_minimal()
-```
-
-(ref:placeholder-2) Placeholder two.
+Figure \@ref(fig:school-size): The impact of varying far UVC coverage and efficacy on the annual incidence of a respiratory virus, for each of the pathogen archetypes considered.
+Values presented represent the mean (bars) averaged over the 10 stochastic model simulations carried out, with the range (error bars) of % reduction in incidence across those simulations also plotted.
 
 # Bibliography {.unnumbered}
